2022-04-01  John Baldwin  <jhb@FreeBSD.org>

	* elf.c (elfcore_grok_freebsd_note): Remove checks for namesz.

2022-03-22  Steiner H Gunderson  <steinar+sourceware@gunderson.no>

	* dwarf2.c (_bfd_dwarf2_find_nearest_line): if a function name is
	found, but no line number info, then return a result of 2.

2022-03-21  Steiner H Gunderson  <steinar+sourceware@gunderson.no>

	PR 28978
	* dwarf2.c (scan_unit_for_symbols): When performing second pass,
	check to see if the function or variable being processed is the
	same as the previous one.

2022-03-18  Viorel Preoteasa  <viorel.preoteasa@gmail.com>

	PR 28924
	* elf32-arm.c (THM_MAX_FWD_BRANCH_OFFSET): Fix definition.
	(THM2_MAX_FWD_BRANCH_OFFSET): Likewise.

2022-03-16  Simon Marchi  <simon.marchi@efficios.com>

	* Makefile.am (ALL_MACHINES, ALL_MACHINES_CFILES):
	Add cpu-amdgcn.c.
	(BFD64_BACKENDS): Add elf64-amdgcn.lo.
	(BFD64_BACKENDS_CFILES): Add elf64-amdgcn.c.
	* Makefile.in: Re-generate.
	* cpu-amdgcn.c: New.
	* elf64-amdgcn.c: New.
	* archures.c (bfd_architecture): Add bfd_arch_amdgcn and related
	mach defines.
	(bfd_amdgcn_arch): New.
	(bfd_archures_list): Add bfd_amdgcn_arch.
	* bfd-in2.h: Re-generate.
	* config.bfd: Handle amdgcn* target.
	* configure.ac: Handle amdgcn_elf64_le_vec.
	* configure: Re-generate.
	* elf-bfd.h (elf_target_id): Add AMDGCN_ELF_DATA.
	* targets.c (amdgcn_elf64_le_vec): New.
	(_bfd_target_vector): Add amdgcn_elf64_le_vec.

2022-03-01  Torbjörn Svensson  <torbjorn.svensson@st.com>
	    Fred Eisele  <fredrick.eisele@gmail.com>

	PR 25713
	* bfdio.c (_bfd_real_fopen): Fix typo.

2022-03-01  Nick Clifton  <nickc@redhat.com>

	PR 28848
	* elf32-arm.c (elf32_arm_merge_eabi_attributes): If the first
	input bfd has a Tag_ABI_HardFP_use set to 3 but does not also have
	TAG_FP_arch set then reset the TAG_ABI_HardFP_use.

2022-02-28  Torbjörn Svensson  <torbjorn.svensson@st.com>
	    Fred Eisele  <fredrick.eisele@gmail.com>

	PR 25713